# lines-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: lib.rs
src/: bytes.rs  lib.rs  linemapper.rs  linereader.rs  main.rs
tests/: lib.rs
