[package]

name = "lines"
description = "Utililities for iterating readers efficiently line-by-line."
version = "0.0.4"
authors = ["Petr Novotnik <pnovotnik@googlemail.com>"]
license = "MIT"
keywords = ["streaming"]
repository = "https://github.com/xitep/lines-rs.git"
documentation = "https://xitep.github.io/lines-rs/"

[dependencies]
memchr = "0.1"
